refactor and fix bugged from sprint 0 to sprint 4
